score counter works, game stops when dead and new game button becomes visible done

--- a/style.css
+++ b/style.css
@@ -1,93 +1,112 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    background-image: url('img/11_background.png');
-    overflow: hidden;
+body {
+  background-image: url("img/11_background.png");
+  overflow: hidden;
 }
 
-.layer{
-    position: absolute;
-    width: 100%;
-    height: 100vh;
+.layer {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
 }
 
-#layer-1{
-    background-image: url('img/10_distant_clouds.png');
-    
+#layer-1 {
+  background-image: url("img/10_distant_clouds.png");
 }
 
-#layer-2{
-    background-image: url('img/09_distant_clouds1.png');
+#layer-2 {
+  background-image: url("img/09_distant_clouds1.png");
 }
 
-#layer-3{
-    background-image: url('img/08_clouds.png');
+#layer-3 {
+  background-image: url("img/08_clouds.png");
 }
 
-#layer-4{
-    background-image: url('img/03_distant_trees.png');
-    background-position-y: -350px;
+#layer-4 {
+  background-image: url("img/03_distant_trees.png");
+  background-position-y: -350px;
 }
 
-#layer-5{
-    background-image: url('img/02_trees\ and\ bushes.png');
-    background-position-y: -400px;
+#layer-5 {
+  background-image: url("img/02_trees\ and\ bushes.png");
+  background-position-y: -400px;
 }
 
-#layer-6{
-    background-image: url('img/01_ground.png');
-    background-position-y: -400px;
+#layer-6 {
+  background-image: url("img/01_ground.png");
+  background-position-y: -400px;
 }
 
-#player{
-    background-image: url('img/idle.gif');
-    background-size: 18rem;
-    background-position-x: 40px;
-    position: absolute;
-    width: 210px;
-    height: 250px;
-    bottom: 50px;
-    left: calc(50% - 75px);
+#player {
+  background-image: url("img/idle.gif");
+  background-size: 18rem;
+  background-position-x: 40px;
+  position: absolute;
+  width: 210px;
+  height: 250px;
+  bottom: 50px;
+  left: calc(50% - 75px);
 }
 
-#player-hitbox{
-    border-style: solid;
-    border-color: coral;
-    border-width: 1px;
-    background-size: 18rem;
-    background-position-x: 40px;
-    position: absolute;
-    width: 60px;
-    height: 150px;
-    bottom: 60px;
-    left: calc(50% - 2px);
+#player-hitbox {
+  border-style: solid;
+  border-color: coral;
+  border-width: 1px;
+  background-size: 18rem;
+  background-position-x: 40px;
+  position: absolute;
+  width: 60px;
+  height: 150px;
+  bottom: 60px;
+  left: calc(50% - 2px);
 }
 
-.obstacle{
-    /* background-color: black; */
-    border-style: solid;
-    border-color: coral;
-    border-width: 1px;
-    background-image: url('img/rock1.png');
-    background-size: 80px;
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    bottom: 50px;
-    left: 1760px;
-    /* border-radius: 50%; */
+.obstacle {
+  /* background-color: black; */
+  border-style: solid;
+  border-color: coral;
+  border-width: 1px;
+  background-image: url("img/rock1.png");
+  background-size: 80px;
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  bottom: 50px;
+  left: 1760px;
+
+  /* border-radius: 50%; */
 }
 
-#score{
-    position: absolute;
-    width: 200px;
-    height: 100px;
-    line-height: 100px;
-    border-style: solid;
-    border-color: coral;
-    border-width: 3px;
-    text-align: center;
+#score {
+  position: absolute;
+  width: 200px;
+  height: 100px;
+  line-height: 100px;
+  border-style: solid;
+  border-color: coral;
+  border-width: 3px;
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+#new-game {
+  border-style: solid;
+  border-color: coral;
+  border-width: 1px;
+  position: absolute;
+  width: 100px;
+  height: 50px;
+  bottom: 70%;
+  left:  calc(50% - 50px);
+  display: none;
+}
+
+#new-game > button {
+  width: 100px;
+  height: 50px;
 }
